[metadata]
name = imageobfuscator-SHANTIH19
version = 1.0
author = shantih19
author_email = shantih19@gmail.com
description = Encode and decode data in an image using a password
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shantih19/imageobfuscator
project_urls =
    Bug Tracker = https://github.com/shantih19/imageobfuscator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >= 3.6
install_requires =
		pillow

[options.packages.find]
where = src